k8s/ems-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ems
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ems
  template:
    metadata:
      labels:
        app: ems
    spec:
      containers:
        - name: ems
          image: employee-management-system:v4
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
