k8s/ems-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ems
  labels:
    app: ems
spec:
  selector:
    app: ems
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
